testdata/baselines/reference/submodule/conformance/intersectionTypeInference3.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
intersectionTypeInference3.ts(4,6): error TS2304: Cannot find name 'Symbol'.
intersectionTypeInference3.ts(9,18): error TS2583: Cannot find name 'Set'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
intersectionTypeInference3.ts(10,18): error TS2583: Cannot find name 'Set'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
intersectionTypeInference3.ts(12,12): error TS2304: Cannot find name 'Array'.
intersectionTypeInference3.ts(12,33): error TS2304: Cannot find name 'Array'.
intersectionTypeInference3.ts(17,11): error TS2304: Cannot find name 'ReadonlyArray'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== intersectionTypeInference3.ts (6 errors) ====
    // Repro from #19682
    
    type Nominal<Kind extends string, Type> = Type & {
        [Symbol.species]: Kind;
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    };
    
    type A = Nominal<'A', string>;
    
    declare const a: Set<A>;
                     ~~~
!!! error TS2583: Cannot find name 'Set'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
    declare const b: Set<A>;
                     ~~~
!!! error TS2583: Cannot find name 'Set'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
    
    const c1 = Array.from(a).concat(Array.from(b));
               ~~~~~
!!! error TS2304: Cannot find name 'Array'.
                                    ~~~~~
!!! error TS2304: Cannot find name 'Array'.
    
    // Simpler repro
    
    declare function from<T>(): T[];
    const c2: ReadonlyArray<A> = from();
              ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ReadonlyArray'.
    